# nowcasting_forecast

./: .bumpversion.cfg  .gitignore  .pre-commit-config.yaml  MANIFEST.in  README.md  environment.yml  pyproject.toml  requirements-no-deps.txt  requirements.txt  setup.py  test-docker-compose.yml
.github/workflows/: build-docker.yaml  linters.yaml  release.yaml  test-docker.yaml  workflows.yaml
infrastructure/docker/: Dockerfile
nowcasting_forecast/: __init__.py  app.py  batch.py  dataloader.py  models.py  utils.py
nowcasting_forecast/config/: cnn_v1.yaml  helios.yaml  mvp_v0.yaml  mvp_v1.yaml  mvp_v2.yaml  mvp_v3.yaml  power_perceiver.yaml  pp_v1.yaml  pvnet_v1.yaml
nowcasting_forecast/data/: gsp_capacity.csv
nowcasting_forecast/database/: connection.py  fake.py  models.py  national.py  read.py  save.py  utils.py
nowcasting_forecast/models/: __init__.py  hub.py  nwp_solar_simple.py  sun.py  utils.py
nowcasting_forecast/models/cnn/: cnn.py  dataloader.py  model.py  readme.md
nowcasting_forecast/models/nwp_simple_trained/: model.py  nwp_simple_trained.py  xr_utils.py
nowcasting_forecast/models/power_perceiver/: __init__.py  (+4 more)
scripts/: get_gsp_capacity.py  model_diagram.py  plot_forecast_from_db.py  upload_new_model_hf.py
tests/: conftest.py  test-docker-compose.yml  test_app.py  test_batch.py
tests/database/: test_databaseconnection.py  test_fake.py  test_national.py  test_read.py  test_save.py  test_utils.py
tests/models/: test_cnn_model.py  test_nwp_simple.py  test_sun.py  test_utils.py
tests/sat_data/: area.npy  geo.npy  hrv_area.npy  hrv_geo.npy
(+9 files in other folders)
