[tool.poetry]
name = "nowcasting_forecast"
version = "1.1.0"
description = "Live forecast for the OCF nowcasting project"
authors = ["Peter Dudfield", "Open Climate Fix Ltd"]
maintainers = ["Peter Dudfield <peter@openclimatefix.org>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/openclimatefix/nowcasting_forecast"
keywords = ["artificial intelligence", "forecast", ]
packages = [{include = "nowcasting_forecast"}]

[tool.poetry.dependencies]
python = "^3.9"
pydantic = "^1.9.1"
SQLAlchemy = "^1.4.36"
psycopg2-binary = "^2.9.3"
numpy = "^1.22.4"
click = "^8.1.3"
nowcasting-dataset = "3.5.0"
nowcasting-dataloader = "1.8.38"
nowcasting-datamodel = "1.0.7"
fsspec = "^2022.5.0"
torch = "^1.11.0"
pytorch-lightning = "^1.6.3"
xarray = "^2022.3.0"
zarr = "^2.11.3"
huggingface-hub = "^0.7.0"
pvlib = "^0.9.1"
protobuf = "^3.20"
s3fs = "^2022.5.0"

pytest = {version = "^7.1.2", optional = true}
pytest-cov = {version = "^3.0.0", optional=true}
coverage = {version = "^6.0", optional=true}



[tool.poetry.extras]
test = ["pytest", "pytest-cov", "coverage"]


[tool.poetry.dev-dependencies]
black = "^22.3.0"
mypy = "^0.960"

[tool.poetry.scripts]
nowcasting-forecast = "nowcasting_forecast.app:run"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
